v1.1.5 (2022-09-10)
- Fixed timestamps. 

v1.1.4 (2022-08-27)
- Fixed subscription content.
- Added date to upcoming events.

v1.1.3 (2022-08-08)
- Code refactoring.

v1.1.2 (2022-08-06)
- Added Live TV.
- Added catchup function for M3U playlist.
- Other fixes.

v1.1.1 (2022-07-10)
- Fixed memory leak.

v1.1.0 (2022-07-09)
- Bug fixes.

v1.0.9 (2022-07-08)
- Hotfix.

v1.0.8 (2022-07-08)
- Bug fixes.

v1.0.7 (2022-06-16)
- Fixed live tv play from beginning error.

v1.0.6 (2022-06-12)
- Fixes.

v1.0.5 (2022-06-11)
- Fixed encoding for playlist generator.

v1.0.4 (2022-06-11)
- Added M3U playlist generator.
- Code refactoring.

v1.0.3 (2022-06-10)
- Hotfix.

v1.0.2 (2022-06-10)
- Added days for live channels.
- Code refactoring.

v1.0.1 (2022-06-09)
- Added new categories for sports and kids section.

v1.0 (2022-06-08)
- Production release.

v0.9 (2022-06-06)
- Fixed token refresh.

v0.8 (2022-06-04)
- Fixes.

v0.7 (2022-06-04)
- Fixed login.

v0.6 (2022-05-27)
- Added xbmc.Player callbacks.

v0.5 (2022-05-21)
- Bug fixes.

v0.4 (2022-05-20)
- Added IA shortcut to settings.

v0.3 (2022-05-20)
- Added section upcoming sports.

v0.2 (2022-05-20)
- Code refactoring.

v0.1.3 (2022-05-20)
- Fixed childlock.

v0.1.2 (2022-05-20)
- Fixes.

v0.1.1 (2022-05-19)
- Added childlock.

v0.1 (2022-05-18)
- Added kids section.

v0.0.9 (2022-05-18)
- Code refactoring.
- Added sport section.

v0.0.8 (2022-05-16)
- Added profiles.
	
v0.0.7 (2022-05-16)
- Bug fixes.

v0.0.6 (2022-05-16)
- Added search function.

v0.0.5 (2022-05-15)
- Added VOD Series.

v0.0.4 (2022-05-14)
- Added VOD.

v0.0.3 (2022-05-13)
- Fixes.

v0.0.2 (2022-05-13)
- Code refactoring.
- Added extended information to context menu.
- Added catchup dot. 

v0.0.1 (2022-05-12)
- Initial version.