@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.cmore" name="C More" version="1.1.5-beta.2" provider-name="mariusz89b">
+<addon id="plugin.video.cmore" name="C More" version="1.1.5" provider-name="mariusz89b">
   <requires>
     <import addon="xbmc.python" version="3.0.0"/>
     <import addon="script.module.inputstreamhelper" version="0.2.4"/>
@@ -26,6 +26,7 @@
     <source>https://github.com/Mariusz89B/plugin.video.cmore</source>
     <news>v1.1.5 (2022-09-10)
 - Fixed timestamps. 
+- Fixed kids section.
 
 v1.1.4 (2022-08-27)
 - Fixed subscription content.
