@@ -1,5 +1,6 @@
 v1.1.5 (2022-09-10)
 - Fixed timestamps. 
+- Fixed kids section.
 
 v1.1.4 (2022-08-27)
 - Fixed subscription content.
